[package]
authors = ["Pierre Avital <pierre.avital@me.com>"]
edition = "2018"
name = "message_plugins"
version = "0.1.0"
description = "A Message-Passing Oriented backbone for Rust plugins to Rust programs"
keywords = ["map", "structures", "vec-map"]
license = "MPL-2.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
tokio-host = ["tokio", "futures"]

[dependencies]
futures = {version = "0.3", optional = true}
tokio = {version = "0.2", features = ["macros", "rt-threaded", "rt-core", "sync"], optional=true}
libloading = "0.6"