[package]
name = "concat_host"
version = "0.1.0"
authors = ["Pierre Avital <pierre.avital@me.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
message_plugins = ""
concat_types = {path = "../concat_types"}
tokio = {version = "0.2", features = ["macros", "rt-threaded", "sync"]}